# enhanced-word

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_ENHANCED.md  __init__.py  enhanced-word-mcp-codebase.md  index.js  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-chatgpt-integration.sh  test_enhanced_features.py  test_enhanced_features_1749845684774.docx  test_enhanced_features_1749845685258.docx  test_enhanced_features_1749845685318.docx  test_enhanced_features_1749847107360.docx  test_enhanced_features_1749847107754.docx  test_enhanced_features_1749847107805.docx
.github/workflows/: tests.yml
.serena/cache/: document_symbols_cache_v20-05-25.pkl
tests/: conftest.py  helpers.py  test_citation_tools_basic.py  test_content_tools_basic.py  test_content_tools_properties.py  test_content_tools_run_boundaries.py  test_content_tools_search_replace_edges.py  test_convert_to_pdf.py  test_document_tools_basic.py  test_e2e_mcp_stdio.py  test_equation_tools_basic.py  test_file_utils.py  test_footnote_tools.py  test_limits_and_consistency.py  test_long_session_consistency_stress.py  test_manage_protection_contract.py  test_memory_pressure_stress.py  test_protection_signature.py  test_regex_pathologies_stress.py  test_review_tools_comments.py  test_search_replace_guardrails.py  test_section_tools_basic.py  test_session_tools_exports.py  test_session_utils.py  test_tool_registry.py  test_undo_tools.py  test_undo_workflow.py  test_version_consistency.py
word_document_server/: __init__.py  main.py  session_manager.py  undo_manager.py
word_document_server/core/: footnotes.py  styles.py
word_document_server/tools/: __init__.py  citation_tools.py  content_tools.py  document_tools.py  equation_tools.py  extended_document_tools.py  footnote_tools.py  protection_tools.py  review_tools.py  section_tools.py  session_tools.py  undo_tools.py
word_document_server/utils/: citation_utils.py  document_utils.py  equation_utils.py  extended_document_utils.py  file_utils.py  limits.py  mml2omml.xsl  session_utils.py
